# OperationShort

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  imgui.ini  vcpkg.json
alpacaTrading/: alpacaTrading.py  tradingArchitecture.py
src/: Backtester.cpp  OrderTypeEnum.hpp  Porfolio.hpp  Portfolio.cpp  Portfolio.hpp  Stock.cpp  Stock.hpp  Strategy.cpp  Strategy.hpp  SymbolEnum.hpp  UsingImGui.h  backtester.hpp  datagrabber.py  gui.cpp  imGuiFunction.cpp
src/tickerData/: AAPL_2025-07-21_data.csv  AAPL_2025-07-22_data.csv  AAPL_2025-07-23_data.csv  AAPL_2025-07-24_data.csv  AAPL_data.csv
